# Basics

./: README.md  interviewQuestions.md  practice.py  pyproject.toml  revision.py
DuckTyping/: duckTyping.py
Exceptions/: basicSyntax.py  customException.py  exceptionChaining.py  multipleException.py
IO/: dummy.txt  fileOperations.py
SpecialMethods/: remaingDunderMethods.md  reprAndStr.py  specialMethods.py
codingQ/: fibanocciSeries.py
factoryPattern/: factoryPattern.py
