[project]
name = "basics"
version = "0.1.0"
description = "This project mainly talks about python fundamentals deep understanding"
authors = [
    {name = "Vali S, Mastan",email = "mastanvali157@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (==2.3.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
